--- a/css/style.css
+++ b/css/style.css
@@ -1319,6 +1319,7 @@ html {
   line-height: 24px;
   font-family: "Roboto Condensed", "Arial", sans-serif;
   color: #000000;
+  scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
@@ -1544,6 +1545,22 @@ button,
   -ms-grid-column-span: 1;
   grid-column: 1/2;
   color: #ffffff;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.header__logo:hover,
+.header__logo:focus {
+  opacity: 0.7;
+}
+
+.header__logo:active {
+  opacity: 0.3;
 }
 
 .header__tel {
@@ -1555,6 +1572,19 @@ button,
   grid-column: 2/3;
   gap: 15px;
   max-width: 30%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.header__tel:hover,
+.header__tel:focus {
+  opacity: 0.7;
+}
+
+.header__tel:active {
+  opacity: 0.3;
 }
 
 .header__tel-link {
@@ -1661,6 +1691,23 @@ button,
   outline: 4px solid #ffffff;
   letter-spacing: 0.5px;
   text-align: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.header__link:hover,
+.header__link:focus {
+  color: #102654;
+  background-color: #ffffff;
+  opacity: 0.7;
+}
+
+.header__link:active {
+  color: #102654;
+  background-color: #ffffff;
+  opacity: 0.3;
 }
 
 .header__picture {
@@ -1695,6 +1742,15 @@ button,
   color: #ffffff;
 }
 
+.footer__logo-link:hover,
+.footer__logo-link:focus {
+  opacity: 0.7;
+}
+
+.footer__logo-link:active {
+  opacity: 0.3;
+}
+
 .footer__navigation {
   max-width: 60%;
 }
@@ -1721,6 +1777,19 @@ button,
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.footer__link:hover,
+.footer__link:focus {
+  opacity: 0.7;
+}
+
+.footer__link:active {
+  opacity: 0.3;
 }
 
 .footer__social-list {
@@ -1736,6 +1805,15 @@ button,
   column-gap: 11px;
   margin: 0;
   padding: 0;
+}
+
+.footer__social-list a:hover,
+.footer__social-list a:focus {
+  opacity: 0.7;
+}
+
+.footer__social-list a:active {
+  opacity: 0.3;
 }
 
 .gym__content-wrapper {
@@ -1897,7 +1975,7 @@ button,
   line-height: 65px;
   font-family: "Alumni Sans", "Arial", sans-serif;
   letter-spacing: 1.5px;
-  margin-bottom: 22px;
+  margin-bottom: 20px;
 }
 
 .tabs__description {
@@ -1942,6 +2020,7 @@ button,
 .tabs__control {
   position: relative;
   padding: 0;
+  padding-top: 2px;
   background-color: transparent;
   border: none;
   font-family: "Roboto Condensed", "Arial", sans-serif;
@@ -1952,6 +2031,10 @@ button,
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .tabs__control.is-active {
@@ -1967,6 +2050,11 @@ button,
   bottom: -15px;
   left: 0;
   background-color: #d10a42;
+}
+
+.tabs__control:hover,
+.tabs__control:focus {
+  opacity: 1;
 }
 
 .tabs__content {
@@ -2073,6 +2161,10 @@ button,
   line-height: 14px;
   text-transform: uppercase;
   letter-spacing: 0.5px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .tabs__component a:hover,
@@ -2082,6 +2174,15 @@ button,
   background-image: linear-gradient(to right bottom, #d10a42, #00359f);
   color: #ffffff;
   outline: none;
+}
+
+.tabs__component a:active {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#d10a42), to(#00359f));
+  background-image: -o-linear-gradient(left top, #d10a42, #00359f);
+  background-image: linear-gradient(to right bottom, #d10a42, #00359f);
+  color: #ffffff;
+  outline: none;
+  opacity: 0.5;
 }
 
 .tabs__text {
@@ -2552,6 +2653,10 @@ button,
   padding: 23px;
 }
 
+.coaches__description--tzinch h3 {
+  color: #102654;
+}
+
 .coaches__description h3 {
   margin: 0;
   text-align: center;
@@ -2883,6 +2988,10 @@ button,
   padding: 0 0 2px 0;
   border: none;
   border-bottom: 2px solid #1c3374;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   font-weight: 700;
   font-size: 14px;
   line-height: 17px;
@@ -3212,6 +3321,24 @@ button,
   padding-bottom: 16px;
   color: #ffffff;
   background-color: transparent;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.form__submit-button:hover,
+.form__submit-button:focus {
+  color: #102654;
+  background-color: #ffffff;
+  opacity: 0.7;
+}
+
+.form__submit-button:active {
+  color: #102654;
+  background-color: #ffffff;
+  opacity: 0.3;
 }
 
 .btn {
