--- a/css/style.css
+++ b/css/style.css
@@ -2992,6 +2992,7 @@ button,
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  letter-spacing: 0.5px;
   font-weight: 700;
   font-size: 14px;
   line-height: 17px;
@@ -3025,6 +3026,7 @@ button,
   width: 70px;
   font-size: 12px;
   line-height: 16px;
+  padding: 0 0 1px 0;
 }
 
 .special__link--list:focus-visible {
@@ -3045,14 +3047,13 @@ button,
   display: grid;
   -ms-grid-columns: (fr)[2];
   grid-template-columns: repeat(2, fr);
-  grid-auto-rows: 1fr;
   row-gap: 40px;
   margin: 0;
   padding: 0;
 }
 
 .special__item {
-  padding: 22px 34px 32px;
+  padding: 22px 34px 34px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4199,7 +4200,8 @@ button,
   .video__button {
     width: 52px;
     height: 52px;
-    right: 41%;
+    right: 43%;
+    top: 37%;
   }
 
   .video__button svg {
@@ -4661,6 +4663,13 @@ button,
   }
 }
 
+@media (max-width: 900px) {
+  .video__button {
+    right: 41%;
+    top: 34%;
+  }
+}
+
 @media (max-width: 767px) {
   .container {
     padding: 0 15px;
@@ -4906,7 +4915,8 @@ button,
   }
 
   .event__content h3 {
-    margin-left: 10px;
+    text-align: center;
+    margin-right: 27px;
   }
 
   .event__link {
@@ -5131,7 +5141,6 @@ button,
   .special__subscription-wrapper {
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
   }
 
   .special__subscription {
@@ -5144,6 +5153,10 @@ button,
 
   .special__subscription p {
     margin-bottom: -6px;
+  }
+
+  .special__subscription span {
+    margin-bottom: 26px;
   }
 
   .special__list {
